--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>API-COUNTRIES</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <header>
-      <button class="get-data">Get Countries data</button>
+      <button class="get-data">Get Countries data </button>
     </header>
     <div class="card-wrapper"></div>
+    <div class="modal-wrapper">
+      <div class="modal-content"></div>
+      <div class="modal-close">🙅🏻‍♀️</div>
+    </div>
   </body>
   <script src="index.js"></script>
 </html>
